--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> 
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+    <div class="container"></div>
 </body>
 </html>
