--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-    <div class="container"></div>
+    <div class="container">
+        <h1 id="title">United States GDP</h1>
+    </div>
 </body>
 </html>
